--- a/suppl/background.Rmd
+++ b/suppl/background.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Other enrichment methods"
+title: "Visualize the grouping patterns of countries"
 author: "Zuguang Gu ( z.gu@dkfz.de )"
 date: '`r Sys.Date()`'
 output: 
@@ -18,7 +18,6 @@ knitr::opts_chunk$set(
     fig.align = "center"
 )
 ```
-
 
 
 ```{r}
@@ -74,26 +73,43 @@ calc_stat = function(df, cutoff_total = 10000, cutoff_single = 100, min_country 
 
 	df
 }
+```
 
 
+```{r, fig.width = 6, fig.height = 6}
 df = read.table("num_cite_country_country.tab", quote = "", sep = "\t", header = TRUE)
-df = calc_stat(df, cutoff_total = 10000, cutoff_single = 100, all = TRUE)
-df$cate = ifelse(df$country_cited == df$country_citing, "Domestic", 
-	         ifelse(country_meta[df$country_cited, "region"]=="Africa" & country_meta[df$country_citing, "region"]== "Africa", 
-	         	"International\n  within Africa", "International"))
-df$cate = factor(df$cate, levels = c("Domestic", "International\n  within Africa", "International"))
+df1 = calc_stat(df, all = FALSE); rownames(df1) = paste(df1[, 1], df1[, 2], sep = "-")
+df2 = df[df[, 1] != df[, 2], ]
+df2 = calc_stat(df2, all = FALSE); rownames(df2) = paste(df2[, 1], df2[, 2], sep = "-")
+
+cn = intersect(rownames(df1), rownames(df2))
+df1 = df1[cn, ]
+df2 = df2[cn, ]
+
+l = df1$log2_fc- df2$log2_fc < -0.4
+plot(df1$log2_fc, df2$log2_fc, cex = ifelse(l, 0.8, 0.2), 
+	col = add_transparency(ifelse(l&grepl("United States", rownames(df1)), "red", 
+		      ifelse(l&grepl("China", rownames(df1)), "blue", 
+		      	ifelse(l&grepl("Ethiopia", rownames(df1)), "orange", "black"))), 0.25),
+	pch = ifelse(df1$country_cited == "United States", 4, 
+		      ifelse(df1$country_cited == "China", 4,
+		      	 ifelse(df1$country_cited == "Ethiopia", 4, 16))
+		),
+	xlab = "log2 fold enrichment / all citations", ylab = "log2 fold enrichment / international citations", main = "compare universe"
+)
+abline(v = 0, lty = 2, col = "grey")
+abline(h = 0, lty = 2, col = "grey")
+legend("topleft", cex = 0.7,
+	legend = c("from United States", "on United States", "on China", "on Ethiopia", "others"), 
+	col = c("red", "red", "blue", "orange", "black"), pch = c(16, 4, 4, 4, 16))
 ```
 
-
-```{r}
-ggplot(df, aes(x = citations, y = z_score, col = cate)) + geom_point(size = 0.5) +
-    scale_color_discrete() + scale_x_log10()
-```
 
 
 ```{r, fig.width = 10, fig.height = 10}
 df = read.table("num_cite_country_country.tab", quote = "", sep = "\t", header = TRUE)
-df = calc_stat(df, cutoff_total = 10000, cutoff_single = 100, min_country = 25, all = FALSE)
+df = df[df[, 1] != df[, 2], ]
+df = calc_stat(df, cutoff_total = 10000, cutoff_single = 100, min_country = 24, all = FALSE)
 m = xtabs(z_score ~ country_cited + country_citing, data = df)
 class(m) = "matrix"
 
@@ -106,7 +122,7 @@ library(igraph)
 
 set.seed(123)
 g = graph_from_adjacency_matrix(m2, mode = "plus", weighted = TRUE)
-cm = cluster_louvain(g, weight = E(g)$weight, resolution = 1.2)
+cm = cluster_louvain(g, weight = E(g)$weight, resolution = 1.5)
 communities(cm)
 mem = membership(cm)
 
@@ -163,8 +179,8 @@ ht = Heatmap(m, name = "Enrichment score", #cluster_rows = hc, cluster_columns =
 		                               "#citing" = anno_barplot(sqrt(as.vector(n_citing[colnames(m)])), ylim = c(0, 8000), axis_param = list(at = c(0,2000,4000,6000,8000), labels = c("0", "4M", "16M", "36M", "64M"))),
 		                               col = list(Region = region_color)),
 	cluster_row_slices = FALSE, cluster_column_slices = FALSE,
-	row_split = factor(as.character(mem[rownames(m)]), levels = c(2, 7, 3, 5, 6, 1, 4)),
-	column_split = factor(as.character(mem[colnames(m)]), levels = c(2, 7, 3, 5, 6, 1, 4)),
+	row_split = factor(as.character(mem[rownames(m)])),
+	column_split = factor(as.character(mem[colnames(m)])),
 	border = "black"
 
 )
@@ -185,9 +201,4 @@ Heatmap(mm, name = "classification",
 	col = structure(names = 1:7, 2:8),
 	row_labels = c("by_z_score", "by_log2_fc"))
 ```
-
-
-
-
-
 
