--- a/suppl/suppl02_domestic_fit.Rmd
+++ b/suppl/suppl02_domestic_fit.Rmd
@@ -75,9 +75,12 @@ $$
 
 ```{r}
 plot(df2$citations, df2$log2_fc, log = "x", xlab = "# Domestic citations", ylab = "Enrichment scores")
+summary(lm(df2$log2_fc ~ log2(df2$citations)))
 ```
 
-In this document, we will prove when there are positive enrichment, $a_1 + a_2 > 1$ and it results in the decrease
+-------------
+
+In this document, we will prove when there is a positive domestic enrichment, $a_1 + a_2 > 1$ and it results in the decrease
 of the enrichment scores.
 
 First let's simplify the notations: $k_{A-A}$ to $k$, $m_{A-}$ to $m$ and $n_{-A}$ to $n$. From the two linear fits, we have:
@@ -99,7 +102,7 @@ $$
 
 It is easy to see, when there is no enrichment of domestic citations, $a_1 + a_2 = 1$.
 
-Now we have:
+Now we have (by cancelling $mn$):
 
 $$
 k^{a_1 + a_2} \cdot 2^{b_1 + b_2} = k_\mathrm{exp}N
@@ -126,9 +129,9 @@ $$
 
 which is quadratic.
 
-Next we look at the expansion rate of $k_2/k_1$ (the difference of $k$ to the expected $k_\mathrm{exp}$. If there is an over-representation, $k$ can be decomposed to
+Next we look at the expansion rate of $k_2/k_1$. If there is an over-representation, $k$ can be decomposed to
 
-$k = k_\mathrm{exp} + k_\mathrm{diff}$
+$$k = k_\mathrm{exp} + k_\mathrm{diff}$$
 
 where $k_\mathrm{diff}$ is the over-represented portion of $k$. It can be expected that when $m$ or $n$ increases, $k_\mathrm{diff}$
 also increases. Now the question is does it increase by a fixed a rate or does it still depends on $m$ or $n$ (i.e. increase faster when $m$ or $n$ gets larger?)
@@ -144,23 +147,19 @@ plot(df2$total_citing, diff/df2$total_citing, log = "x", xlab = "# Citations A c
 ```
 
 We can see, in both plots, there are positive linear relations in the log-scale. Let's fit the two linear models.
-Note China (index = 11) and United States (index = 80) are removed from the fitting because they are outliers on the scatter plots.
+Note China (index = 11), Ethiopia (index = 20) and United States (index = 80) are removed from the fitting because they are outliers on the scatter plots.
 
 ```{r}
-p1 = diff/df2$total_citing
-summary(lm(p1[-c(11, 80)] ~ log(df2$total_citing[-c(11, 80)])))
+p1 = diff/df2$total_cited
+summary(lm(p1[-c(11, 20, 80)] ~ log(df2$total_cited[-c(11, 20, 80)])))
 
-p2 = diff/df2$total_cited
-summary(lm(p2[-c(11, 80)] ~ log(df2$total_cited[-c(11, 80)])))
+p2 = diff/df2$total_citing
+summary(lm(p2[-c(11, 20, 80)] ~ log(df2$total_citing[-c(11, 20, 80)])))
 ```
 
+To reduce the complexity of the following analysis, we assume $m = n$. 
 
-
-Both slope and intercept coeffcients are very small. To reduce the complexity of the followig equations, we assume $m = n$. 
-We discuss the following two scenarios.
-
-**Scenario 1**: there is a weak positive relations between $p$ and $m$ in the log-scale, thus on the normal scale, we can approximate
-$p$ as a constant and not dependent to $m$, i.e.:
+**Scenario 1**: The first regression is not significant, then we can assume $p = k_\mathrm{diff}/m$ is a constant and not dependent to $m$, i.e.:
 
 $$
 \begin{align*}
@@ -184,17 +183,17 @@ Note since $\alpha > 1$, we have $k_2/k_1 < \alpha^2$.
 
 In the equation, it also shows the expansion of the citation network can be decomposed into two parts, the part without 
 citation enrichment which grows in quadratic speed ($\sim \alpha^2$), and the "over-represented" part which grows in linear
-speed ($\sim \alpha$, the second line in the equation above). Mixing these two speeds results the final speed being weak than quadratic.
+speed ($\sim \alpha$, the second line in the equation above). Mixing these two speeds results the final speed being weaker than quadratic.
 
 
-**Scenario 2**: let's assume there is the following relation where $p$ is dependent on $\log m$. Note for simplicity we 
+**Scenario 2**: The second regression is significant. Let's assume there is the following relation where $p$ is dependent on $\log m$. Note for simplicity we 
 removed the intercept (the value of the intercept is very small and it can be ignored).
 
 $$
 p = w \log(m)
 $$
 
-where $w$ is slop coefficient from the linear fit.
+where $w$ is slop coefficient from the linear fit ($w = 0.01495$ from the fitting).
 
 Then $k_2/k_1$ can be written as:
 
